<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#EDE7F6"
    >

    <Button
        android:id="@+id/request_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:text="All Request Permission"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_permission"
        android:layout_marginTop="15dp"
        android:background="#EDE7F6"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EDE7F6"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="#3F51B5"
                android:text="@string/button1"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight=".2"
                android:background="#3F51B5"
                android:text="@string/button2"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#EDE7F6"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="#3F51B5"
                android:text="@string/button3"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight=".2"
                android:background="#3F51B5"
                android:text="@string/button4"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#EDE7F6"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="#3F51B5"
                android:text="@string/button5"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight=".2"
                android:background="#3F51B5"
                android:text="@string/button6"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#EDE7F6"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="#3F51B5"
                android:text="@string/button7"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight=".2"
                android:background="#3F51B5"
                android:text="@string/button8"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#EDE7F6"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="#3F51B5"
                android:text="@string/button9"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight=".2"
                android:background="#3F51B5"
                android:text="@string/button10"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#EDE7F6"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="#3F51B5"
                android:text="@string/button11"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight=".2"
                android:background="#3F51B5"
                android:text="@string/button12"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#EDE7F6"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3F51B5"
                android:text="@string/button13"
                android:textColor="#ffffff"/>


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>