<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_gradient"
                >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/id_btn_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="中文"/>

        <Button
            android:id="@+id/id_btn_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="英文"/>

        <Button
            android:id="@+id/id_btn_fr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="法语"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="45dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_form_rounded"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:hint="@string/email"
                android:padding="5dp"
                android:singleLine="true"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_button_rounded"
            android:text="@string/login"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/signup"
              android:layout_alignParentBottom="true"
              android:gravity="center_horizontal"
              android:layout_marginBottom="25dp"
              android:textColor="@color/white"/>

</RelativeLayout>